--- a/learn ing/指令中的scope.html
+++ b/learn ing/指令中的scope.html
@@ -14,6 +14,16 @@
 		<p>但是当需要创建一个重复使用的directive的时候，就不能依赖父scope了，因为在不同地方使用directive对应的父scope不同。</p>
 		<p>一个隔离的scope，demo：</p>
 		<dir2></dir2>
+		<p>隔离scope和父scope如何交互</p>
+		<p>directive在使用隔离scope的时候，提供了三种同隔离之外的地方交互。</p>
+		<ul>
+			<li>@ 绑定一个局部scope属性到当前dom节点的属性值。结果总是一个字符串，dom属性是字符串。</li>
+			<li>& 提供一种方式执行一个表达式在fuscope的上下文中。如果没有指定attr名称，则属性名称为相同的本地名称。</li>
+			<li>= 通过directive的attr属性的值在局部scope的属性和父scope属性名之间建立双向绑定。</li>
+		</ul>
+		<p>demos:</p>
+		<p>@ 局部scope属性:</p>
+		<dir@></dir@>
 		<script>
 			var app = angular.module('app',[]);
 			//自定义指令
@@ -27,10 +37,21 @@
 				return{
 					restrict:'E',
 					scope:{},
+					controller: function($scope) {
+          				$scope.msg="YiMing"
+          			},
 					template:'<span>say:{{msg}}</span>'
 					//replace:true
 				}
-			}]);
+			}]).directive('dir@',function(){
+				return{
+					restrict:'E',
+					scope:{
+						name:"@"
+					},
+					template:'say:{{msg}},改变隔离scope的msg值，<input ng-model="msg" />'
+				}
+			});
 		</script>
 	</body>
 </html>
