--- a/learn ing/指令中的scope.html
+++ b/learn ing/指令中的scope.html
@@ -4,27 +4,43 @@
 		<meta charset="UTF-8">
 		<title>指令属性scope</title>
 		<script src="../js/angular.min.js"></script>
+		<style>
+			div.box {
+				width: 80%;
+				margin: 50px auto;
+				background-color: rgb(246, 246, 246);
+				padding: 15px;
+			}
+		</style>
 	</head>
 	<body ng-app='app'>
-		<p>directive默认能够共享父scope中定义的属性，例如在末班中直接使用父scope中的对象和属性。</p>
-		<p>通常使用这种直接的共享方式可以实现一些简单的directive功能。</p>
-		<p>demo:</p>
-		<p>界面绑定的msg：<span ng-init='msg="hello"' ng-bind="msg"></span></p>
-		<p>自定义指令dir：<dir></dir></p>
-		<p>但是当需要创建一个重复使用的directive的时候，就不能依赖父scope了，因为在不同地方使用directive对应的父scope不同。</p>
-		<p>一个隔离的scope，demo：</p>
-		<dir2></dir2>
-		<p>隔离scope和父scope如何交互</p>
-		<p>directive在使用隔离scope的时候，提供了三种同隔离之外的地方交互。</p>
-		<ul>
-			<li>@ 绑定一个局部scope属性到当前dom节点的属性值。结果总是一个字符串，dom属性是字符串。</li>
-			<li>& 提供一种方式执行一个表达式在fuscope的上下文中。如果没有指定attr名称，则属性名称为相同的本地名称。</li>
-			<li>= 通过directive的attr属性的值在局部scope的属性和父scope属性名之间建立双向绑定。</li>
-		</ul>
-		<p>demos:</p>
-		<p>@ 局部scope属性:这种绑定是单向的。下面的栗子是，自定义指令的name属性绑定父scope的属性。当父scope的属性值更改时，指令的name属性相应改变。但是指令的scope的属性值更改时，父scope无变化。</p>
-		<p>更改父scope：<input type="text" ng-model='msg'/></p>
-		<dir@ name='{{msg}}'></dir@>
+		<div class="box">
+			<p>directive默认能够共享父scope中定义的属性，例如在末班中直接使用父scope中的对象和属性。</p>
+			<p>通常使用这种直接的共享方式可以实现一些简单的directive功能。</p>
+			<p>demo:</p>
+			<p>界面绑定的msg：<span ng-init='msg="hello"' ng-bind="msg"></span></p>
+			<p>自定义指令dir：<dir></dir></p>
+			<p>但是当需要创建一个重复使用的directive的时候，就不能依赖父scope了，因为在不同地方使用directive对应的父scope不同。</p>
+			<p>一个隔离的scope，demo：</p>
+			<dir2></dir2>
+			<p>隔离scope和父scope如何交互</p>
+			<p>directive在使用隔离scope的时候，提供了三种同隔离之外的地方交互。</p>
+			<ul>
+				<li>@ 绑定一个局部scope属性到当前dom节点的属性值。结果总是一个字符串，dom属性是字符串。</li>
+				<li>& 提供一种方式执行一个表达式在fuscope的上下文中。如果没有指定attr名称，则属性名称为相同的本地名称。</li>
+				<li>= 通过directive的attr属性的值在局部scope的属性和父scope属性名之间建立双向绑定。</li>
+			</ul>
+			<p>demos:</p>
+			<p>@ 局部scope属性:这种绑定是单向的。下面的栗子是，自定义指令的name属性绑定父scope的属性。当父scope的属性值更改时，指令的name属性相应改变。但是指令的scope的属性值更改时，父scope无变化。</p>
+			<p>更改父scope：<input type="text" ng-model='msg'/></p>
+			<dir@ msg='{{msg}}'></dir@>
+			<p>= 局部scope属性：通过指令的attr在局部和父scope之间建立数据双向绑定。<br />
+				在上一个栗子中，使用msg={{msg}}的方式传递父scope的值，但是局部scope的值更改时，父scope的值不更新。如果想要同时更新，此时需要的是 = 。<br />
+				注意：此时的传递方式不再是msg={{msg}},而是msg=msg。
+			</p>
+			<dir= msg='msg'></dir=>
+		</div>
+		
 		<script>
 			var app = angular.module('app',[]);
 			//自定义指令
@@ -48,9 +64,17 @@
 				return{
 					restrict:'E',
 					scope:{
-						name:"@"
+						msg:"@"
 					},
-					template:'say:{{msg}},改变隔离scope的msg值，<input ng-model="msg" />'
+					template:'父scope-->say:{{msg}},改变隔离scope的msg值，父scope值不变<input ng-model="msg" />'
+				}
+			}).directive('dir=',function(){
+				return{
+					restrict:'E',
+					scope:{
+						msg:"="
+					},
+					template:'父scope-->say:{{msg}},改变隔离scope的msg值，父scope值也变<input ng-model="msg" />'
 				}
 			});
 		</script>
