--- a/learn ing/html dom.html
+++ b/learn ing/html dom.html
@@ -25,6 +25,11 @@
 				<li>......</li>
 			</ul>
 			<p><a href="http://www.runoob.com/angularjs/angularjs-reference.html">其他指令</a></p>
+			<p>常用angularjs事件</p>
+			<ul>
+				<li>ng-click</li>
+				<li>ng-change</li>
+			</ul>
 		</div>
 	</body>
 </html>
